--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,18 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "experiment"
+path = "src/experiment.rs"
+
 [features]
 default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
 num = "0.4.0"
+rand = "0.8.4"
+lazy_static = "1.4.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
