--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,10 @@ default = ["console_error_panic_hook"]
 wasm-bindgen = "0.2.63"
 num = "0.4.0"
 rand = "0.8.4"
+getrandom = { features = ["js"] }
 lazy_static = "1.4.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.59"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
