--- a/www/package.json
+++ b/www/package.json
@@ -16,7 +16,9 @@
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "copy-webpack-plugin": "^5.0.0",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "ffxiv-crafter-rust": "file:../pkg"
