--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,8 @@
   },
   "author": "Shunsuke Ohashi <amylase.inquiry@gmail.com>",
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "hello-wasm-pack": "^0.1.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
@@ -21,6 +23,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "ffxiv-crafter-rust": "file:../pkg"
+    "ffxiv-crafter-rust": "file:../pkg",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
