--- a/www/package.json
+++ b/www/package.json
@@ -19,6 +19,7 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "copy-webpack-plugin": "^5.0.0",
+    "source-map-loader": "^1.1.3",
     "ts-loader": "^8.1.0",
     "typescript": "^4.3.5"
   },
