--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ getrandom = { features = ["js"] }
 lazy_static = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.59"
+strum = "0.21"
+strum_macros = "0.21"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
