--- a/www/package.json
+++ b/www/package.json
@@ -24,8 +24,10 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "ffxiv-crafter-rust": "file:../pkg",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2"
   }
 }
