--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         working-directory: www
         run: |
           npm install
-          npm build
+          npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
