--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ num = "0.4.0"
 rand = "0.8.4"
 getrandom = { features = ["js"] }
 lazy_static = "1.4.0"
+rayon = "1.5.1"
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.59"
