--- a/www/package.json
+++ b/www/package.json
@@ -14,14 +14,14 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "hello-wasm-pack": "^0.1.0",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
     "copy-webpack-plugin": "^5.0.0",
+    "hello-wasm-pack": "^0.1.0",
     "source-map-loader": "^1.1.3",
     "ts-loader": "^8.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
