--- a/www/package.json
+++ b/www/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --mode production"
   },
   "author": "Shunsuke Ohashi <amylase.inquiry@gmail.com>",
   "devDependencies": {
@@ -20,8 +20,8 @@
     "ts-loader": "^8.1.0",
     "typescript": "^4.3.5",
     "webpack": "^5.70.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
